@@ -53,7 +53,8 @@ public class CppMontiThingsPrettyPrinter extends MontiThingsPrettyPrinter {
     List<PortSymbol> portsInBatchStatement = ComponentHelper.getPortsInBatchStatement(comp);
 
     List<ASTSyncStatement> syncStatements = ComponentHelper
-      .elementsOf(comp).filter(ASTSyncStatement.class).toList();
+      .elementsOf(comp).filter(ASTSyncStatement.class::isInstance).map(ASTSyncStatement.class::cast)
+      .collect(Collectors.toList());
 
     if (port.isPresent()) {
       String prefix;
